# cute_fox

./: Cargo.toml
data/: clear_database.db  database.db
examples/: get_members_ids.rs  user_from_page.rs
examples/get_all_users/: get_all_users.rs
examples/get_all_users_parallel/: get_all_users_parallel.rs
src/: lib.rs
src/requests/: api_manager.rs
src/stages/: groups.rs  users.rs
tests/: get_members.rs  get_members_ids.rs  user_deserializing.rs  user_from_page.rs
tests/get_all_users/: get_all_users.rs
tests/get_all_users_parallel/: get_all_users_parallel.rs
tests/save_user/: save_user.rs
