[package]
name = "cute_fox"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"

rusqlite = { version = "0.24", features = ["bundled"] }

serde = { version = "1", features = ["derive"] }
serde_with = "1"

reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }

[[bin]]
name = "user_from_page"
path = "tests/user_from_page.rs"

[[bin]]
name = "get_members_ids"
path = "tests/get_members_ids.rs"

[[bin]]
name = "get_members"
path = "tests/get_members.rs"

[[bin]]
name = "save_user"
path = "tests/save_user/save_user.rs"