[package]
name = "cute_fox"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"

rusqlite = { version = "0.24", features = ["bundled"] }

serde = { version = "1", features = ["derive"] }
serde_with = "1"

reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
futures = "0"

async-trait = "0"

[[bin]]
name = "user_from_page"
path = "tests/user_from_page.rs"

[[bin]]
name = "get_members_ids"
path = "tests/get_members_ids.rs"

[[bin]]
name = "get_members"
path = "tests/get_members.rs"

[[bin]]
name = "save_user"
path = "tests/save_user/save_user.rs"

[[bin]]
name = "get_all_users"
path = "tests/get_all_users/get_all_users.rs"

[[bin]]
name = "get_all_users_parallel"
path = "tests/get_all_users_parallel/get_all_users_parallel.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
